@@ -1,3 +1,8 @@
+2008-01-21  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* UseSTAThreadAttributeOnSWFEntryPointsTest.cs: New. Unit tests 
+	from Daniel Abramov (with a bit more coverage by myself).
+
 2007-10-07  Sebastien Pouliot  <sebastien@ximian.com>
 
 	* Test.Rules.Ui.mdp: Update project file.
